--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 .container1,
 .container2 {
     background-image: linear-gradient(rgba(0, 0, 0, 0.322), rgba(0, 0, 0, 0.274)), url("../images/fondodron.jpg");
-    height: 50em;
+    height: 53em;
     background-size: 100%;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -57,10 +57,13 @@ small {
 input {
     margin-bottom: 6px;
     width: 100px;
-    height: 40px;
     border-radius: 4px;
     background-color: rgba(255, 255, 255, 0.644);
     text-align: center;
+}
+
+.inp {
+    height: 40px;
 }
 
 .guardar {
@@ -76,7 +79,7 @@ input {
 
 .container2 {
     display: none;
-    grid-template: "a  d" 200px "b  d" 350px "c  e" 240px/ 30% 70%;
+    grid-template: "a d d" 170px "b d d" 390px "b c e" 280px/ 30% 35% 35%;
 }
 
 .instrucciones2 {
@@ -118,7 +121,6 @@ input {
 }
 
 .m {
-    /* background-color: rgb(255, 255, 255); */
     background-image: url("../images/cuadricula.jpg");
     color: red;
     font-family: Arial, Helvetica, sans-serif;
@@ -126,5 +128,36 @@ input {
     height: 1em;
     text-align: center;
     align-items: center;
-    /* border: 1px solid gray; */
+}
+
+.d1,
+.d2,
+.d3 {
+    background-image: url("../images/cuadricula.jpg");
+    border-radius: 50%;
+    font-size: 15px;
+    text-align: center;
+}
+
+.d1 {
+    color: red;
+}
+
+.d2 {
+    color: blue;
+}
+
+.d3 {
+    color: green;
+}
+
+.dr {
+    width: 100px;
+    height: 30px;
+}
+
+.btn {
+    width: 100px;
+    height: 30px;
+    border-radius: 4px;
 }
