visual segunda pagina

--- a/my-app/src/componentes/styles/Formulario.css
+++ b/my-app/src/componentes/styles/Formulario.css
@@ -1,12 +1,11 @@
 .formulario-home{
     border: solid 1px black;
-    background-color: blanchedalmond;
+    background-color: rgb(241, 237, 231);
     border-radius: 6px;
     width: 50em;
     text-align: center;
     margin: auto;
-    padding: 20px
-    
+    padding: 20px;
 }
 .titulo{
     text-align: center;
